--- a/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
+++ b/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
@@ -132,14 +132,14 @@
               </td>
               <td
                 *ngIf="tiers !=undefined && tiers.paymentType!=undefined && tiers.paymentType.code!=undefined && tiers.paymentType.code==PAYMENT_TYPE_PRELEVEMENT">
-                <generic-input [(model)]="tiers.paymentIBAN" label="IBAN" [form]="settlementBillingForm"
+                <generic-input [(model)]="tiers.paymentIban" label="IBAN" [form]="settlementBillingForm"
                   propertyName="paymentIBAN" [isMandatory]="true" [isDisabled]="!editMode"
                   [conditionnalRequired]="instanceOfTiers(this.tiers) && this.tiers.paymentType != undefined && this.tiers.paymentType.code != undefined && this.tiers.paymentType.code == PAYMENT_TYPE_PRELEVEMENT "
                   [maxLength]="40"></generic-input>
               </td>
               <td
                 *ngIf="tiers !=undefined && tiers.paymentType!=undefined && tiers.paymentType.code!=undefined && tiers.paymentType.code==PAYMENT_TYPE_PRELEVEMENT">
-                <generic-input [(model)]="tiers.paymentBIC" label="BIC" [form]="settlementBillingForm"
+                <generic-input [(model)]="tiers.paymentBic" label="BIC" [form]="settlementBillingForm"
                   propertyName="paymentBIC" [isMandatory]="true" [isDisabled]="!editMode"
                   [conditionnalRequired]="instanceOfTiers(this.tiers) && this.tiers.paymentType != undefined && this.tiers.paymentType.code != undefined && this.tiers.paymentType.code == PAYMENT_TYPE_PRELEVEMENT "
                   [maxLength]="8"></generic-input>
