--- a/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
+++ b/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
@@ -130,11 +130,11 @@
                 [isDisabled]="!editMode"></chips-special-offers>
             </td>
             <td>
-              <generic-input [(model)]="tiers.rcaFormaliteRate" [isDisabled]="!editMode" label="Taux RCA Formalité"
+              <generic-input [(model)]="tiers.rffFormaliteRate" [isDisabled]="!editMode" label="Taux RCA Formalité"
                 [form]="principalForm" propertyName="rcaFormaliteRate" type="number"></generic-input>
             </td>
             <td>
-              <generic-input [(model)]="tiers.rcaInsertionRate" [isDisabled]="!editMode" label="Taux RCA Insertion"
+              <generic-input [(model)]="tiers.rffInsertionRate" [isDisabled]="!editMode" label="Taux RCA Insertion"
                 [form]="principalForm" propertyName="rcaInsertionRate" type="number"></generic-input>
             </td>
           </tr>
