--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -169,11 +169,11 @@
                       [form]="principalForm" propertyName="isBouclette"></generic-toggle>
                   </td>
                   <td>
-                    <generic-input [(model)]="tiers.rcaFormaliteRate" label="Taux RCA Formalité" [form]="principalForm"
+                    <generic-input [(model)]="tiers.rffFormaliteRate" label="Taux RCA Formalité" [form]="principalForm"
                       propertyName="rcaFormaliteRate" type="number"></generic-input>
                   </td>
                   <td>
-                    <generic-input [(model)]="tiers.rcaInsertionRate" label="Taux RCA Insertion" [form]="principalForm"
+                    <generic-input [(model)]="tiers.rffInsertionRate" label="Taux RCA Insertion" [form]="principalForm"
                       propertyName="rcaInsertionRate" type="number"></generic-input>
                   </td>
                 </tr>
