--- a/client/src/theme.scss
+++ b/client/src/theme.scss
@@ -5,22 +5,21 @@
 
 // generated custom palette
 $primary-palette: (
-    50: #ffffff,
-    100: #ffffff,
-    200: #f1ebe3,
-    300: #d9cab4,
-    400: #cebc9f,
-    500: #c4ae8b,
-    600: #baa077,
-    700: #af9262,
-    800: #a18352,
-    900: #8d7248,
-    A100: #ffffff,
-    A200: #fbf6ed,
-    A400: #dec8a3,
-    A700: #d0bb98,
-  contrast: (
-    50 : #ffffff,
+  50: #ffffff,
+  100: #ffffff,
+  200: #f1ebe3,
+  300: #d9cab4,
+  400: #cebc9f,
+  500: #c4ae8b,
+  600: #baa077,
+  700: #af9262,
+  800: #a18352,
+  900: #8d7248,
+  A100: #ffffff,
+  A200: #fbf6ed,
+  A400: #dec8a3,
+  A700: #d0bb98,
+  contrast: (50 : #ffffff,
     100 : #ffffff,
     200 : #ffffff,
     300 : #ffffff,
@@ -34,10 +33,10 @@ $primary-palette: (
     A200 : #ffffff,
     A400 : #ffffff,
     A700 : #ffffff,
-)
+  )
 );
 
-$secondary-palette:  (
+$secondary-palette: (
   50: #9dc2e0,
   100: #639ecd,
   200: #3c83bd,
@@ -52,8 +51,7 @@ $secondary-palette:  (
   A200: #2490e9,
   A400: #1c598b,
   A700: #1f4b6f,
-  contrast: (
-    50 : #ffffff,
+  contrast: (50 : #ffffff,
     100 : #ffffff,
     200 : #ffffff,
     300 : #ffffff,
@@ -67,7 +65,7 @@ $secondary-palette:  (
     A200 : #ffffff,
     A400 : #ffffff,
     A700 : #ffffff,
-)
+  )
 );
 
 
@@ -86,22 +84,21 @@ $warn-palette: (
   A200 : #fb9489,
   A400 : #e74837,
   A700 : #d83d2d,
-    contrast: (
-        50 : #ffffff,
-        100 : #ffffff,
-        200 : #ffffff,
-        300 : #ffffff,
-        400 : #ffffff,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #ffffff,
-        A200 : #ffffff,
-        A400 : #ffffff,
-        A700 : #ffffff,
-    )
+  contrast: (50 : #ffffff,
+    100 : #ffffff,
+    200 : #ffffff,
+    300 : #ffffff,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #ffffff,
+    A200 : #ffffff,
+    A400 : #ffffff,
+    A700 : #ffffff,
+  )
 );
 
 $primary: mat-palette($primary-palette);
@@ -112,26 +109,24 @@ $theme: mat-light-theme($primary, $secondary, $warn);
 
 @include angular-material-theme($theme);
 
-$custom-typography: mat-typography-config(
-  $font-family: Avenir Black
-);
+$custom-typography: mat-typography-config($font-family: Avenir Black);
 @include mat-core($custom-typography);
 
 
 .blue-snackbar {
-  background: #1C3D58 ;
-  color:white;
+  background: #1C3D58;
+  color: white;
 }
 
-.blue-snackbar .mat-simple-snackbar-action  {
+.blue-snackbar .mat-simple-snackbar-action {
   color: white;
 }
 
 .red-snackbar {
-  background: #c0392b ;
-  color:white;
+  background: #c0392b;
+  color: white;
 }
 
-.red-snackbar .mat-simple-snackbar-action  {
+.red-snackbar .mat-simple-snackbar-action {
   color: white;
 }
