--- a/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
@@ -1,6 +1,6 @@
-<table class="total-table mat-table full-width"
-  *ngIf="invoice.payments && invoice.payments.length>0 || invoice.deposits && invoice.deposits.length>0">
-  <tr class=" mat-header-row">
+<table class="mat-table full-width">
+  <tr class=" mat-header-row"
+    *ngIf="invoice.payments && invoice.payments.length>0 || invoice.deposits && invoice.deposits.length>0">
     <th class="mat-header-cell" colspan="2">Paiements associés</th>
   </tr>
   <ng-container *ngIf="invoice.payments && invoice.payments.length>0 ">
@@ -23,7 +23,8 @@
       </td>
     </tr>
   </ng-container>
-  <tr class="mat-row">
+  <tr class="mat-row"
+    *ngIf="invoice.payments && invoice.payments.length>0 || invoice.deposits && invoice.deposits.length>0">
     <td class="mat-cell">
     </td>
     <td class="td-price mat-cell">
