--- a/client/src/app/modules/quotation/components/affaire/affaire.component.html
+++ b/client/src/app/modules/quotation/components/affaire/affaire.component.html
@@ -96,6 +96,19 @@
         <table class="full-width">
           <tr>
             <td>
+              <generic-input [(model)]="affaire.paymentIban" label="IBAN" [form]="affaireForm"
+                propertyName="paymentIban" [isMandatory]="false" [isDisabled]="!editMode" [maxLength]="40">
+              </generic-input>
+            </td>
+            <td>
+              <generic-input [(model)]="affaire.paymentBic" label="BIC" [form]="affaireForm" propertyName="paymentBic"
+                [isMandatory]="false" [isDisabled]="!editMode" [maxLength]="40"></generic-input>
+            </td>
+          </tr>
+        </table>
+        <table class="full-width">
+          <tr>
+            <td>
               <chips-mail [(model)]="affaire.mails" label="Mails de facturation" [form]="affaireForm"
                 propertyName="mails" [isDisabled]="true"></chips-mail>
             </td>
