remove Other in billing type, remove regie, add billing center, remove RTF generation

--- a/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
@@ -35,6 +35,13 @@
           </tr>
           <tr>
             <td>
+              <select-provision-family [(model)]="selectedEntity.provisionFamilyType"
+                label="Famille de prestations associée" [form]="entityForm" propertyName="provisionFamilyType"
+                [isMandatory]="false" [isDisabled]="!editMode"></select-provision-family>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <div *ngIf="!editMode">
                 <p>Texte :</p>
                 <span [innerHTML]="selectedEntity.text| trustHtml"></span>
